--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=UserService
+# spring.application.name=UserService
+# spring.datasource.url=jdbc:mysql://localhost:3306/microservice
+# spring.datasource.username=root
+# spring.datasource.password=admin
+
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.show-sql=true
