hard coded service called

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,6 +19,26 @@
             "projectName": "HotelService",
             "args": "",
             "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-RatingServiceApplication<RatingService>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "com.Rating.RatingServiceApplication",
+            "projectName": "RatingService",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-ServiceRegisteryApplication<ServiceRegistery>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "com.registery.ServiceRegisteryApplication",
+            "projectName": "ServiceRegistery",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
