--- a/RatingService/src/main/resources/application.yml
+++ b/RatingService/src/main/resources/application.yml
@@ -3,4 +3,21 @@ spring:
         mongodb:
             uri: mongodb://localhost:27017
             database: microservice
+    application:
+        name: RATING-SERVICE
+server:
+  port: 8081
+
+eureka:
+  instance:
+   prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
+
+
+
 
