--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring:
   application:
     name: UserService
 
+
   datasource:
     url: jdbc:mysql://localhost:3306/microservice
     username: root
@@ -10,3 +11,22 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
+
+server:
+  port: 8080
+
+
+
+
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+
+   
+
+
