before fault tolerance

--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -1,6 +1,13 @@
+
+
+
 spring:
   application:
     name: USERSERVICE
+  config:
+    import: "optional:configserver:http://localhost:8085"
+  # profiles:
+  #   active: prod
 
 
   datasource:
@@ -18,14 +25,7 @@ server:
 
 
 
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+
 
    
 
