--- a/HotelService/src/main/resources/application.yml
+++ b/HotelService/src/main/resources/application.yml
@@ -2,6 +2,8 @@
 spring:
   application:
     name: HotelService
+  config:
+    import: "optional:configserver:http://localhost:8085"
 
   datasource:
     url: jdbc:mysql://localhost:3306/microservice2
@@ -16,12 +18,13 @@ server:
 
 
 
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+#set in the github configuration
+# eureka:
+#   instance:
+#     prefer-ip-address: true
+#   client:
+#     fetch-registry: true
+#     register-with-eureka: true
+#     service-url:
+#       defaultZone: http://localhost:8761/eureka/
 
