--- a/RatingService/src/main/resources/application.yml
+++ b/RatingService/src/main/resources/application.yml
@@ -1,21 +1,25 @@
 spring:
-    data:
-        mongodb:
-            uri: mongodb://localhost:27017
-            database: microservice
-    application:
-        name: RATING-SERVICE
+  application:
+    name: rating-service
+  config:
+    import: "optional:configserver:http://localhost:8085"
+
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017
+      database: microservice
+   
 server:
   port: 8081
 
-eureka:
-  instance:
-   prefer-ip-address: true
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+# eureka:
+#   instance:
+#    prefer-ip-address: true
+#   client:
+#     fetch-registry: true
+#     register-with-eureka: true
+#     service-url:
+#       defaultZone: http://localhost:8761/eureka/
 
 
 
