--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     name: USERSERVICE
   config:
     import: "optional:configserver:http://localhost:8085"
+
   # profiles:
   #   active: prod
-
 
   datasource:
     url: jdbc:mysql://localhost:3306/microservice
@@ -21,6 +21,51 @@ spring:
 
 server:
   port: 8080
+#actuator ko configuration 
+management:
+  health:
+    circuitbreakers:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health
+
+  endpoint:
+    health:
+      show-details: always
+
+#circuit breaker configuration 
+resilience4j:
+  circuitbreaker:
+    instances:
+      ratingHotelFault:
+        register-health-indicator: true
+        event-consumer-buffer-size: 10
+        failure-rate-threshold: 50
+        minimum-number-of-calls: 5
+        automatic-transition-from-open-to-half-open-enabled: true
+        wait-duration-in-open-state: 5
+        permitted-number-of-calls-in-half-open-state: 2
+        sliding-window-size: 10
+        sliding-window-type: count-based
+  retry:
+    instances:
+      ratingHotelFault:
+        max-attempts: 3
+        wait-duration: 5s
+  ratelimiter:
+    instances:
+      ratelimiter:
+        limit-refresh-period: 5s
+        limit-for-period: 2
+        timeout-duration: 5s
+    
+      
+
+
+
+
 
 
 
